# cde115-ml2026-proyecto

./: .gitignore  Dockerfile  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
