[project]
name = "cde115-ml2026-proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
]
